// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DrawerContentContainer /> renders correctly when closed 1`] = `
<div
  className="DrawerContentContainer"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": "-80%",
      "position": "fixed",
      "top": 0,
      "transform": "translateX(0%)",
      "transition": "transform .2s ease-in-out",
      "width": "80%",
      "zIndex": 2,
    }
  }
>
  <div />
</div>
`;

exports[`<DrawerContentContainer /> renders correctly when swiping down 1`] = `
<div
  className="DrawerContentContainer"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "height": "80%",
      "left": 0,
      "position": "fixed",
      "right": 0,
      "top": "-80%",
      "transform": "translateY(50%)",
      "transition": "",
      "zIndex": 2,
    }
  }
>
  <div />
</div>
`;

exports[`<DrawerContentContainer /> renders correctly when swiping left 1`] = `
<div
  className="DrawerContentContainer"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "bottom": 0,
      "position": "fixed",
      "right": "-80%",
      "top": 0,
      "transform": "translateX(-50%)",
      "transition": "",
      "width": "80%",
      "zIndex": 2,
    }
  }
>
  <div />
</div>
`;

exports[`<DrawerContentContainer /> renders correctly when swiping right 1`] = `
<div
  className="DrawerContentContainer"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": "-80%",
      "position": "fixed",
      "top": 0,
      "transform": "translateX(50%)",
      "transition": "",
      "width": "80%",
      "zIndex": 2,
    }
  }
>
  <div />
</div>
`;

exports[`<DrawerContentContainer /> renders correctly when up 1`] = `
<div
  className="DrawerContentContainer"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "bottom": "-80%",
      "height": "80%",
      "left": 0,
      "position": "fixed",
      "right": 0,
      "transform": "translateY(-50%)",
      "transition": "",
      "zIndex": 2,
    }
  }
>
  <div />
</div>
`;
